Modifie index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
       <!-- Menu langues -->
       <div id="langues">
-          <p><a href="index_ang.html"><img src="https://i.imgur.com/KclXeK0.png" alt="Anglais" /></a>  <a href="index_fr.html" ><img src="https://i.imgur.com/umBWXvd.png" alt="Français" /></a></p>
+          <p><a href="index_ang.html"><img src="https://i.imgur.com/KclXeK0.png" alt="Anglais" /></a>  <a href="index.html" ><img src="https://i.imgur.com/umBWXvd.png" alt="Français" /></a></p>
       </div>
       
       <!-- Logo greatest show -->
